# Loom

./: .gitignore  CLAUDE.md  README.md
Loom/: ContentView.swift  Item.swift  LoomApp.swift
Loom.xcodeproj/: project.pbxproj
docs/: REFACTOR-PLAN.md
proxy/: Cargo.toml
proxy/src/: main.rs
scripts/: package-dmg.sh  smoke-e2e.sh
ui/: Package.swift
ui/Loom/: ContentView.swift  Item.swift  LoomApp.swift
ui/Loom.xcodeproj/: project.pbxproj
ui/Loom.xcodeproj/xcshareddata/xcschemes/: Tether.xcscheme
ui/Loom/Assets.xcassets/BrandIcon.imageset/: Contents.json
ui/Loom/Features/Graph/: GraphPane.swift
ui/Loom/Features/Inspector/: InspectorPane.swift
ui/Loom/Features/MainLayout/: MainThreePaneLayoutView.swift
ui/Loom/Features/Menu/: AgentTraceMenuCommands.swift
ui/Loom/Features/Settings/: AppSettingsView.swift
ui/Loom/Features/Shell/: TitleBar.swift
ui/Loom/Features/Sidebar/: Sidebar.swift
ui/Loom/Features/Welcome/: WelcomeView.swift
ui/Loom/Services/: LocalProxyLauncher.swift
ui/Sources/Networking/: KeychainStore.swift  LocalProxyLauncher.swift
ui/Sources/UI/DesignSystem/: AgentTracePalette.swift
ui/Sources/UI/SessionList/: SessionListView.swift
ui/Sources/UI/Shared/: TraceSharedViews.swift
web/: README.md  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
web/app/[slug]/: page.tsx
web/app/api/waitlist/: route.ts
web/components/: SiteChrome.tsx
web/lib/: data.ts  site-pages.ts
web/public/: llms.txt  pricing.md
(+1 files in other folders)
