[package]
name = "loom-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
axum = "0.8"
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"
serde_json = "1"
bytes = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
